--- a/package.json
+++ b/package.json
@@ -12,8 +12,22 @@
     "@types/react-dom": "^16.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-localize-redux": "^3.5.3",
+    "react-redux": "^7.2.1",
+    "react-resizable": "^1.10.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "next",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-logger": "^3.0.6",
+    "typescript": "~3.7.2",
+    "typescript-fsa": "^3.0.0-beta-2",
+    "typescript-fsa-reducers": "^1.0.0",
+    "typescript-fsa-redux-saga": "^1.1.1",
+    "webpack": "^4.43.0",
+    "ws": "^7.1.2",
+    "src": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
