--- a/package.json
+++ b/package.json
@@ -2,41 +2,11 @@
   "name": "fakeskype",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-localize-redux": "^3.5.3",
-    "react-redux": "^7.2.1",
-    "react-resizable": "^1.10.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "next",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "redux-logger": "^3.0.6",
-    "typescript": "~3.7.2",
-    "typescript-fsa": "^3.0.0-beta-2",
-    "typescript-fsa-reducers": "^1.0.0",
-    "typescript-fsa-redux-saga": "^1.1.1",
-    "webpack": "^4.43.0",
-    "ws": "^7.1.2",
-    "src": "^1.1.2"
-  },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
@@ -49,5 +19,40 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "history": "^4.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-localize-redux": "^3.5.3",
+    "react-redux": "^7.2.1",
+    "react-resizable": "^1.10.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "next",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "src": "^1.1.2",
+    "typescript": "~3.7.2",
+    "typescript-fsa": "^3.0.0-beta-2",
+    "typescript-fsa-reducers": "^1.0.0",
+    "typescript-fsa-redux-saga": "^1.1.1",
+    "webpack": "^4.43.0",
+    "ws": "^7.1.2"
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.7",
+    "@types/react-redux": "^7.1.9"
   }
 }
