--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.16",
+    "bootstrap": "^4.5.1",
+    "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -38,7 +43,7 @@
     "react-redux": "^7.2.1",
     "react-resizable": "^1.10.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "next",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -53,6 +58,8 @@
   },
   "devDependencies": {
     "@types/history": "^4.7.7",
-    "@types/react-redux": "^7.1.9"
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-redux": "^5.0.18",
+    "stylus": "^0.54.5"
   }
 }
